fix: link preview for actual chat links, remove scrollbar-gutter, fix subheader for mobile, fix form with contact list

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatList/chat-list.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatList/chat-list.css
@@ -102,7 +102,6 @@ body.hoverable .navbar-chats .chat-list-sort-btn.btn:hover .btn-content {
 }
 .chat-list.chat-list-all {
     @apply flex-1 p-2;
-    @apply need-gutter;
 }
 .chat-list.chat-list-skeleton {
     @apply flex-1 px-2;
