--- a/src/dotnet/Chat.UI.Blazor/Components/ChatView/chat-view.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatView/chat-view.css
@@ -52,6 +52,10 @@ body.hoverable .system-entry.message-wrapper:hover {
     @apply flex gap-x-1;
 }
 
+.chat-message:has(.message-link-preview) .url-markup {
+    @apply hidden;
+}
+
 .chat-message-author-name {
     @apply max-h-6 overflow-hidden truncate;
     @apply font-bold text-03;
