--- a/src/nodejs/styles/tailwind.css
+++ b/src/nodejs/styles/tailwind.css
@@ -259,14 +259,4 @@
     .always-white {
         @apply text-[var(--white)];
     }
-
-    /* Scrollbar gutter */
-
-    @media (min-width: 820px) {
-        .need-gutter {
-            @apply px-0;
-            scrollbar-gutter: stable both-edges;
-        }
-    }
-
 }
